Added all variants to wandering trader & Fixed some schematic textures

--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -19,7 +19,6 @@
   "item.forgero.mining_level": "Mining level",
   "item.forgero.rarity": "Rarity",
   "item.forgero.mining_speed": "Mining speed",
-  "item.forgero.forgero:reach": "Reach",
   "item.forgero.armor": "Armor",
   "item.forgero.forgero:reach": "Reach",
   "item.forgero.slots": "Slots",
@@ -235,7 +234,7 @@
   "book.forgero.guidebook.schematics.mastercrafted_schematics.name": "Mastercrafted Schematics",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.description": "Even Better Better Tools!",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title": "Mastercrafted Schematics",
-  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](37bf00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](37bf00)schematics[#](). \n\\\n\\\nJust like the refined ones provide better stats, mastercrafted schematics also feature more [#](FF00C5)slots[#]().",
+  "book.forgero.guidebook.schematics.mastercrafted_schematics.text": "[#](37bf00)Mastercrafted schematics[#]() are a upgrade over the normal and refined [#](37bf00)schematics[#](). \n\\\n\\\nJust like the refined ones provide better stats.",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.title1": "Good luck searching",
   "book.forgero.guidebook.schematics.mastercrafted_schematics.text1": "Just like all the other [#](37bf00)schematics[#]() you can find these by exploring the world. \n\\\n\\\nThese [#](37bf00)schematics[#]() are the most rare of them all. Some blacksmiths never even see these in their lifetime.",
   "book.forgero.guidebook.schematics.shortcut.name": "Customization is key",
