--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -3,14 +3,6 @@
   "block.forgero.upgrade_station": "Upgrade Station",
   "itemGroup.forgero.forgero": "Forgero",
   "util.forgero.name_separator": " ",
-  "advancements.forgero.root.title": "You have entered the world of Forgero",
-  "advancements.forgero.root.description": "Modular Mayhem has started!",
-  "advancements.forgero.tool.title": "Baby steps",
-  "advancements.forgero.tool.description": "That took you long enough!",
-  "advancements.forgero.gem.title": "What is this?",
-  "advancements.forgero.gem.description": "Find you first gem (on accident)",
-  "advancements.forgero.schematic.title": "A very special piece of paper",
-  "advancements.forgero.schematic.description": "Find or craft your first schematic",
   "item.forgero.attack_speed": "Attack speed",
   "item.forgero.conditions": "Conditions:",
   "item.forgero.rare": "Rare",
@@ -304,5 +296,27 @@
   "book.forgero.guidebook.upgrading.reinforcement.text1": "With the right reinforcements you can add multiple mining levels or increase the mining speed of your [#](000CFF)tool[#](). \n\\\n\\\nThere is no correct or incorrect combination so it's best to try what works out for you!",
   "book.forgero.guidebook.upgrading.reinforcement.title1": "What does it add?",
   "book.forgero.guidebook.upgrading.back_to_schematics.name": "Back to schematics!",
-  "book.forgero.guidebook.upgrading.back_to_schematics.description": "Time for a redo?"
+  "book.forgero.guidebook.upgrading.back_to_schematics.description": "Time for a redo?",
+  "advancements.forgero.forgero.title": "Welcome To Forgero",
+  "advancements.forgero.forgero.description": "Let The Mayhem Begin!",
+  "advancements.forgero.tool.title": "Your First Tool!",
+  "advancements.forgero.tool.description": "Baby Steps",
+  "advancements.forgero.gem.title": "Gems",
+  "advancements.forgero.gem.description": "What Is This?",
+  "advancements.forgero.gem_level_5.title": "Level 5 Gem",
+  "advancements.forgero.gem_level_5.description": "MAXIMUM POWER ACHIEVED",
+  "advancements.forgero.schematic.title": "Schematics",
+  "advancements.forgero.schematic.description": "A Blueprint For Tools?",
+  "advancements.forgero.refined_schematic.title": "Refined Schematics",
+  "advancements.forgero.refined_schematic.description": "A Upgrade?",
+  "advancements.forgero.mastercrafted_schematic.title": "Mastercrafted Schematics",
+  "advancements.forgero.mastercrafted_schematic.description": "Top Tier Tools",
+  "advancements.forgero.disassembly_station.title": "Disassembly Station",
+  "advancements.forgero.disassembly_station.description": "Want A Refund?",
+  "advancements.forgero.upgrade_station.title": "The Upgrade Station",
+  "advancements.forgero.upgrade_station.description": "So Many Slots!",
+  "advancements.forgero.pommel.title": "Pommels",
+  "advancements.forgero.pommel.description": "Now Fully Modular Too!",
+  "advancements.forgero.binding.title": "Bindings",
+  "advancements.forgero.binding.description": "This Is New?"
 }
